kiosk: Show network config UI after profile load

BUG=628379

Review-Url: https://codereview.chromium.org/2151113002
Cr-Commit-Position: refs/heads/master@{#406019}

Former-commit-id: d4a1809baa06ab2824b5d732b7d1c1f45fe06660